--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Arrested Development RPG</h1>
+    <h1>ARReSTeD DeVeLOPMeNT RPG Game</h1>
 
     <div id="yourchar">
         <h2 id="char_head">Click an image to select a Bluth sibling:</h2>
